--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+        </div>
+        <div class="main-container">
+            <div class="header">
+            </div>
+            <div class="content">
+                <div class="projects">
+                    <h2 class="content-header">Your Projects</h2>
+                </div>
+                <div class="announcements">
+                    <h2 class="content-header">Announcements</h2>
+                </div>
+                <div class="trending">
+                    <h2 class="content-header">Trending</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
