--- a/index.html
+++ b/index.html
@@ -9,6 +9,50 @@
 <body>
     <div class="container">
         <div class="sidebar">
+            <div class="dashboard">
+                <img src="images/view-dashboard.svg" alt="square" id="dashboard-icon">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="sidebar-navigation">
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Home</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Profile</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Messages</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>History</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Tasks</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Communities</h2>
+                </div>
+            </div>
+            <div class="sidebar-settings">
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Settings</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Support</h2>
+                </div>
+                <div class="sidebar-item">
+                    <img src="" alt="" class="sidebar-icon">
+                    <h2>Privacy</h2>
+                </div>
+            </div>
         </div>
         <div class="main-container">
             <div class="header">
