Implement header and initial version of cards

--- a/index.html
+++ b/index.html
@@ -56,10 +56,80 @@
         </div>
         <div class="main-container">
             <div class="header">
+                <div class="header-menu">
+                    <div class="search-bar">
+                        <img src="images/magnify.svg" alt="" id="magnify">
+                    </div>
+                    <div class="header-menu-menu">
+                        <img src="images/bell-ring.svg" alt="" id="bell-ring">
+                        <h2>Morgan Oakley</h2>
+                    </div>
+                </div>
+                <div class="header-main">
+                    <div class="user-welcome">
+                        <h3>Hi there,</h3>
+                        <h1>Morgan Oakley (@morgan)</h1>
+                    </div>
+                    <div class="header-main-button-container">
+                        <div class="header-main-button"><h3>New</h3></div>
+                        <div class="header-main-button"><h3>Upload</h3></div>
+                            <div class="header-main-button"><h3>Share</h3></div>
+                    </div>
+                </div>
             </div>
             <div class="content">
                 <div class="projects">
                     <h2 class="content-header">Your Projects</h2>
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                        <div class="card">  
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card-line"></div>
+                            <div class="text">
+                                <h3>Lorem ipsum</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            </div>
+                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="announcements">
                     <h2 class="content-header">Announcements</h2>
