Finish implementation of basic web design

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     </div>
                     <div class="header-menu-menu">
                         <img src="images/bell-ring.svg" alt="" id="bell-ring">
-                        <h2>Morgan Oakley</h2>
+                        <h2>Lilith</h2>
                     </div>
                 </div>
                 <div class="header-main">
                     <div class="user-welcome">
                         <h3>Hi there,</h3>
-                        <h1>Morgan Oakley (@morgan)</h1>
+                        <h1>Lilith (@lilith)</h1>
                     </div>
                     <div class="header-main-button-container">
                         <div class="header-main-button"><h3>New</h3></div>
@@ -83,59 +83,132 @@
                     <div class="card-container">
                         <div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
                         </div>
                         <div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
-                        </div>
-                        <div class="card">  
+                        </div><div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
-                        </div>
-                        <div class="card">
+                        </div><div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
-                        </div>
-                        <div class="card">
+                        </div><div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
-                        </div>
-                        <div class="card">
+                        </div><div class="card">
                             <div class="card-line"></div>
-                            <div class="text">
-                                <h3>Lorem ipsum</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
                             </div>
-                            <div class="icons"><img src="" alt="" id="start"><img src="" alt="" id="eye"><img src="" alt="" id="for"></div>
+                        </div><div class="card">
+                            <div class="card-line"></div>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
+                            </div>
+                        </div><div class="card">
+                            <div class="card-line"></div>
+                            <div class="card-content">
+                                <div class="text">
+                                    <h3>Lorem ipsum</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                </div>
+                                <div class="icons"><img src="images/star.svg" alt="" id="start"><img src="images/eye.svg" alt="" id="eye"><img src="images/download.svg" alt="" id="for"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="announcements">
                     <h2 class="content-header">Announcements</h2>
+                    <div class="card">
+                        <div class="announcement-section">
+                            <h3>Site maintenance</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="announcement-section">
+                            <h3>Community share day</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="announcement-section">
+                            <h3>Updated privacy policy</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="trending">
                     <h2 class="content-header">Trending</h2>
+                    <div class="card">
+                        <div class="trending-article">
+                            <img src="images/thumb-up.svg" alt="" class="thumb-up">
+                            <div class="trending-article-content">
+                                <h3>@tegan</h3>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trending-article">
+                            <img src="images/thumb-up.svg" alt="" class="thumb-up">
+                            <div class="trending-article-content">
+                                <h3>@morgan</h3>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="trending-article">
+                            <img src="images/thumb-up.svg" alt="" class="thumb-up">
+                            <div class="trending-article-content">
+                                <h3>@kendall</h3>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+                        <div class="trending-article">
+                            <img src="images/thumb-up.svg" alt="" class="thumb-up">
+                            <div class="trending-article-content">
+                                <h3>@rudolph</h3>
+                                <p>Mega Article</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
